--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "nodemailer": "^7.0.3",
     "redis": "^4.7.0",
     "slugify": "^1.6.6",
-    "socket.io": "^4.8.1"
-  },
-  "devDependencies": {
+    "socket.io": "^4.8.1",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.5",
     "crypto": "^1.0.1",
@@ -29,5 +27,6 @@
     "mongoose": "^8.8.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7"
-  }
+  },
+  "devDependencies": {}
 }
